RbA Build/src/objects/Finance_Program__c.object
<CustomObject>
    <description>This object will hold all the Master Finance Programs.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Finance_Company__c</fullName>
        <label>Finance Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retail Location</label>
        <referenceTo>Store_Configuration__c</referenceTo>
        <relationshipLabel>Finance Programs</relationshipLabel>
        <relationshipName>Finance_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Finance Program</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Finance Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Finance Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>